<?xml version="1.0" encoding="utf-8"?>
<!--fragment login layout  i used <layout for  data binding -->
<!--    i used TextInputLayout for more nice textfield
have two buttons to navigate to welcome screen
-->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text"
        style="layout_marging_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:hint="@string/email"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text"
        style="layout_marging_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:hint="@string/password_text"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:text="@string/login"
        android:textSize="@dimen/button_text_size"

        android:layout_marginVertical="@dimen/vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text" />

    <Button
        android:id="@+id/either_button_id"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"

        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:text="@string/either"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:layout_editor_absoluteX="168dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>